[gd_scene load_steps=12 format=3 uid="uid://dgmcfyqvigqxg"]

[ext_resource type="Theme" uid="uid://y0ybtns8v84q" path="res://main_theme.tres" id="1_88pvy"]
[ext_resource type="Script" path="res://scenes/card_ui/card_ui.gd" id="2_ow43m"]
[ext_resource type="Script" path="res://scenes/card_ui/card_state_machine.gd" id="3_5a6yp"]
[ext_resource type="StyleBox" uid="uid://d1ko1cflvpr6q" path="res://scenes/card_ui/classic_style_box.tres" id="3_tx7u8"]
[ext_resource type="Texture2D" uid="uid://bu36bdsdngw15" path="res://art/defend_rework.png" id="4_8ntck"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_base_state.gd" id="4_l0tir"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_clicked_state.gd" id="5_n3exb"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_dragging_state.gd" id="6_epbil"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_released_state.gd" id="7_ci6d5"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_aiming_state.gd" id="8_3ysth"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jv8bv"]
size = Vector2(60, 90)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(60, 90)
layout_mode = 3
anchor_right = 0.094
anchor_bottom = 0.25
offset_right = -0.16
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_88pvy")
script = ExtResource("2_ow43m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 5.0
offset_right = 58.0
offset_bottom = 91.0
theme_override_styles/panel = ExtResource("3_tx7u8")

[node name="Icon" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -45.0
offset_right = 30.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8ntck")
expand_mode = 1
stretch_mode = 5

[node name="CardName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 19.0
offset_top = 10.0
offset_right = 56.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Cost" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 11.0
offset_right = 60.0
offset_bottom = 91.0
text = "1"

[node name="CardText" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -28.0
offset_right = 26.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "card description"
tab_size = 2

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(30, 45)
shape = SubResource("RectangleShape2D_jv8bv")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_5a6yp")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_l0tir")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_n3exb")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_epbil")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_ci6d5")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_3ysth")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
